# QFATFileSystem

./: .gitignore  CMakeLists.txt  QFATFSConfig.cmake.in  README.md  internal_constants.h  qfat12filesystem.cpp  qfat16filesystem.cpp  qfat32filesystem.cpp  qfatfilesystem.cpp  qfatfilesystem.h  qfatfilesystem_base.cpp
.github/workflows/: ci-freebsd.yml  ci-linux.yml  ci-macos.yml  ci-windows.yml  code-quality.yml  test.yml
examples/: qt_integration_example.cpp
examples/selective_fs/: BENEFITS.md  CMakeLists_FAT12_only.txt  CMakeLists_FAT16_only.txt  CMakeLists_FAT32_only.txt  CMakeLists_custom.txt  INDEX.md  README.md  example_fat12_only.cpp  example_fat16_only.cpp  example_fat32_only.cpp  size_comparison.sh  test_build.sh
tests/: .gitignore  CMakeLists.txt  generate_test_images.sh  test_common.cpp  test_fat12_advanced.cpp  test_fat12_directories.cpp  test_fat12_read.cpp  test_fat12_write.cpp  test_fat16_advanced.cpp  test_fat16_directories.cpp  test_fat16_read.cpp  test_fat16_write.cpp  test_fat32_advanced.cpp  test_fat32_directories.cpp  test_fat32_read.cpp  test_fat32_write.cpp  test_qfatfilesystem_read_image.cpp
